# transGemma

./: .gitignore  README.md  TECHNICAL.md  api.py  app.py  history.db  history.py  languages.py  mcp_server.py  meeting_summarizer.py  pyproject.toml  requirements.txt  test_translate.py  translate-any-txt-pdf-image.ipynb  translator.py  video_dubber.py
.agent/: rules
